Add telemetry and subscriptions

--- a/system-events/src/SystemEvents.csproj
+++ b/system-events/src/SystemEvents.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
+    <PackageReference Include="YamlDotNet" Version="8.1.0" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.100.1" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.101.72" />
   </ItemGroup>
 
 </Project>
