--- a/system-events/src/appsettings.Development.json
+++ b/system-events/src/appsettings.Development.json
@@ -1,12 +1,16 @@
 {
   "Serilog": {
-      "MinimumLevel": {
-        "Default": "Warning",
-        "Override": {
-          "Microsoft": "Information",
-          "Microsoft.AspNetCore": "Warning",
-          "System": "Warning"
-        }
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
       }
     }
+  },
+  "AWS": {
+    "Region": "us-east-1",
+    "ServiceURL": "http://system-events-localstack:4575"
+  }
 }
