--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,12 @@ services:
       dockerfile: src/Dockerfile
     env_file:
       - system-events/src/envvars
+    volumes:
+      - ./system-events/src/config.yml:/config/config.yml
     networks:
       - system-events
     ports:
-      - "32773:80"
+      - "80"
   
   grafana:
     image: grafana/grafana:6.6.0
@@ -65,6 +67,23 @@ services:
       - "9091"
     volumes:
       - ./prometheus:/etc/prometheus
+    networks:
+      - system-events
+  
+  localstack:
+    image: localstack/localstack
+    container_name: system-events-localstack
+    ports:
+      - "4575"
+    networks:
+      - system-events
+  
+  subscription-sns-topic-deployer:
+    build:
+      context: subscriptions
+      dockerfile: Dockerfile
+    env_file:
+      - subscriptions/envvars
     networks:
       - system-events
 
