V1 of slack app release

--- a/system-events/src/config.yml
+++ b/system-events/src/config.yml
@@ -1,6 +1,8 @@
 categories:
   - name: '*'
     description: Allow all events
+  - name: Adhoc
+    description: Adhoc events
   - name: Database Migration
     description: Database migration events
     level: critical
@@ -20,3 +22,6 @@ subscriptions:
   - type: slack
     category: Service Deployment
     webhook_url: https://hooks.slack.com/services/Your/WebHook/Url
+  - type: slack
+    category: '*'
+    webhook_url: https://hooks.slack.com/services/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
